# presage

./: .gitignore  Cargo.toml
companion_daemon/: Cargo.toml
companion_daemon/src/: main.rs
presage/: Cargo.toml
presage-cli/src/: main.rs
presage-store-sqlite/src/: lib.rs  protocol.rs
presage/src/: lib.rs
presage/src/manager/: confirmation.rs  registered.rs
presage/src/model/: messages.rs
signal_daemon/: Cargo.toml
signal_daemon/src/: api.rs  config.rs  main.rs  message_keys.rs  receiver.rs  receiver_parse.rs  sealed_sender.rs  tls_poll.rs
signal_daemon/zkfetch-sidecar/: package.json  server.js
