[workspace]
members = ["presage", "presage-cli", "presage-store-sqlite", "signal_daemon"]
resolver = "2"

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
quickcheck_async = { git = 'https://github.com/nytopop/quickcheck_async', rev = '76b13525ca93e0725e757f841fc6ccab8bae1913' }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = '2a42b3354c9194700d08aa070f70a131a470e7dc' }

# ApiCharge fork of libsignal-service-rs — adds reserve_username/confirm_username
[patch."https://github.com/whisperfish/libsignal-service-rs.git"]
libsignal-service = { git = "https://github.com/ApiCharge/libsignal-service-rs.git", branch = "apicharge-usernames" }

# ApiCharge fork of libsignal — adds LAST_MESSAGE_KEY thread-local for sealed sender relay
# All crates from the monorepo must be patched to avoid dual-version conflicts
[patch."https://github.com/signalapp/libsignal"]
libsignal-protocol = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
libsignal-core = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
libsignal-net = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
libsignal-net-infra = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
signal-crypto = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
zkgroup = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
zkcredential = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
poksho = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
attest = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
libsignal-account-keys = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
libsignal-keytrans = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
libsignal-svrb = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }
usernames = { git = "https://github.com/ApiCharge/libsignal", branch = "apicharge-v0.87.4" }