[package]
name = "signal-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Signal protocol — workspace siblings
presage = { path = "../presage" }
presage-store-sqlite = { path = "../presage-store-sqlite" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.4" }
sqlx = { git = "https://github.com/gferon/sqlx", rev = "53c3a26c1b484175f3beb21853a1061b488bf7af", features = ["sqlite", "runtime-tokio"] }

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
phonenumber = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"

# Crypto — use the same versions presage uses to avoid conflicts.
# These are for our sealed sender extraction code only.
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
aes = "0.8"
ctr = "0.9"

# TLS record capture for on-chain verification
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# X25519 ephemeral key capture — StaticSecret exposes to_bytes(), unlike ring's opaque type
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = "0.6"
