[package]
name = "signal-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Signal protocol — workspace siblings
presage = { path = "../presage" }
presage-store-sqlite = { path = "../presage-store-sqlite" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.4" }
sqlx = { git = "https://github.com/gferon/sqlx", rev = "53c3a26c1b484175f3beb21853a1061b488bf7af", features = ["sqlite", "runtime-tokio"] }

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
phonenumber = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"

# Crypto — use the same versions presage uses to avoid conflicts.
# These are for our sealed sender extraction code only.
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
aes = "0.8"
ctr = "0.9"

# Ed25519 signing for TEE attestation
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Signal username crypto (hash + ZK proof generation)
usernames = { git = "https://github.com/signalapp/libsignal", tag = "v0.87.4" }

# HTTP client for Signal server API (username reserve/confirm)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
getrandom = "0.2"
